--- a/package.json
+++ b/package.json
@@ -9,20 +9,27 @@
     "dev": "node --watch index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
-    "socket.io": "^4.7.5",
-    "cors": "^2.8.5",
-    "qrcode": "^1.5.3",
-    "whatsapp-web.js": "^1.23.0",
-    "sqlite3": "^5.1.6",
     "jsonwebtoken": "^9.0.2",
-    "puppeteer-core": "^19.11.1"
+    "puppeteer-core": "^19.11.1",
+    "qrcode": "^1.5.3",
+    "socket.io": "^4.7.5",
+    "sqlite3": "^5.1.6",
+    "whatsapp-web.js": "^1.23.0"
   },
   "engines": {
     "node": ">=18.x"
   },
-  "keywords": ["pharmacy", "whatsapp", "render", "bubble", "deskpharma"],
+  "keywords": [
+    "pharmacy",
+    "whatsapp",
+    "render",
+    "bubble",
+    "deskpharma"
+  ],
   "author": "Mestre - DeskPharma",
   "license": "MIT"
 }
