--- a/package.json
+++ b/package.json
@@ -1,35 +1,23 @@
 {
   "name": "deskpharma-system",
-  "version": "1.0.2",
-  "description": "Sistema WhatsApp API para Bubble - Render Edition",
-  "main": "index.js",
+  "version": "1.0.0",
   "type": "module",
+  "dependencies": {
+    "whatsapp-web.js": "^1.23.0",
+    "qrcode": "^1.5.3",
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "sqlite3": "^5.1.6",
+    "jsonwebtoken": "^9.0.2",
+    "puppeteer": "^21.5.2"
+  },
   "scripts": {
     "start": "node index.js",
-    "dev": "node --watch index.js"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^4.18.2",
-    "http": "^0.0.1-security",
-    "jsonwebtoken": "^9.0.2",
-    "puppeteer-core": "^19.11.1",
-    "qrcode": "^1.5.3",
-    "socket.io": "^4.7.5",
-    "sqlite3": "^5.1.6",
-    "whatsapp-web.js": "^1.23.0"
+    "postinstall": "node node_modules/puppeteer/install.js"
   },
   "engines": {
-    "node": ">=18.x"
-  },
-  "keywords": [
-    "pharmacy",
-    "whatsapp",
-    "render",
-    "bubble",
-    "deskpharma"
-  ],
-  "author": "Mestre - DeskPharma",
-  "license": "MIT"
+    "node": ">=18.0.0"
+  }
 }
