--- a/package.json
+++ b/package.json
@@ -1,23 +1,1 @@
-{
-  "name": "deskpharma-system",
-  "version": "1.0.0",
-  "type": "module",
-  "dependencies": {
-    "whatsapp-web.js": "^1.23.0",
-    "qrcode": "^1.5.3",
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "sqlite3": "^5.1.6",
-    "jsonwebtoken": "^9.0.2",
-    "puppeteer": "^21.5.2"
-  },
-  "scripts": {
-    "start": "node index.js",
-    "postinstall": "node node_modules/puppeteer/install.js"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  }
-}
+{"name":"wa-like-bridge","version":"1.0.0","type":"module","main":"index.js","license":"MIT","scripts":{"start":"node index.js"},"dependencies":{"@react-three/drei":"^10.7.6","cors":"^2.8.5","dotenv":"^16.4.5","express":"^4.19.2","qrcode":"^1.5.3","socket.io":"^4.7.5","whatsapp-web.js":"^1.26.0"}}
