--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "node --watch index.js"
+    "dev": "node --watch index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "http": "^0.0.1-security",
     "socket.io": "^4.7.5",
     "cors": "^2.8.5",
     "qrcode": "^1.5.3",
@@ -18,7 +18,8 @@
     "sqlite3": "^5.1.6",
     "multer": "^1.4.5-lts.1",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "dotenv": "^16.3.1"
   },
   "keywords": ["pharmacy", "management", "whatsapp", "system"],
   "author": "DeskPharma",
