--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "node --watch index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "node node_modules/puppeteer/install.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -19,7 +19,10 @@
     "multer": "^1.4.5-lts.1",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "puppeteer": "^21.0.0",
+    "mime-types": "^2.1.35",
+    "axios": "^1.6.0"
   },
   "keywords": ["pharmacy", "management", "whatsapp", "system"],
   "author": "DeskPharma",
